# galois

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md  cargo-toolchain.toml  galois.toml  galois.toml.example  rustfmt.toml  sidecar.toml.example
.github/workflows/: build.yml  release.yml
engine/: Cargo.toml
engine/src/: config.rs  core.rs  db.rs  lib.rs  migration.rs  shared.rs  snapshot.rs
engine/src/executor/: assets.rs  clearing.rs  matcher.rs  mod.rs  orderbook.rs  orders.rs
engine/src/fusotao/: committer.rs  connector.rs  mod.rs  prover.rs  scanner.rs  trading_key.rs
engine/src/input/: mod.rs  sequence.rs  sequencer.rs  server.rs  whistle.rs
engine/src/output/: legacy.rs  market.rs  mod.rs
sidecar/: Cargo.toml
sidecar/src/: backend.rs  config.rs  context.rs  db.rs  endpoint.rs  errors.rs  legacy_clearing.rs  lib.rs
sql/: init.sql
src/: assets.rs  clearing.rs  config.rs  core.rs  db.rs  event.rs  lib.rs  main.rs  matcher.rs  onchain.rs  orderbook.rs  output.rs  prover.rs  sequence.rs  server.rs  shared.rs  snapshot.rs
src/executor/: clearing.rs  mod.rs
src/fusotao/: client.rs  connector.rs  meta.rs  mod.rs  persistence.rs  prover.rs
src/input/: event.rs  mod.rs  sequence.rs  server.rs  whistle.rs
src/output/: mod.rs
