[package]
name = "galois"
version = "0.1.0"
authors = ["UINB Technologies"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/uinb/galois"
description = "High performance matching system"
readme = "README.md"

[[bin]]
name = "galois"
path = "bin/galois.rs"

[features]
default = []
prover = ["substrate-api-client"]
enc-conf = ["magic-crypt"]

[dependencies.rust_decimal]
version = "1.15"
features = ["serde-bincode"]

[dependencies.rust_decimal_macros]
version = "1.15"

[dependencies.bincode]
version = "1.3.1"

[dependencies.serde]
version = "1.0.115"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[dependencies.flate2]
version = "1.0"
features = ["zlib"]
default-features = false

[dependencies.mysql]
version = "18.2.0"

[dependencies.redis]
version = "0.17.0"

[dependencies.argparse]
version = "0.2.2"

[dependencies.toml]
version = "0.5.6"

[dependencies.lazy_static]
version = "1.4.0"

[dependencies.linked-hash-map]
version = "0.5.3"
features = ["serde_impl"]

[dependencies.async-std]
version = "1.6.3"
default-features = false
features = ["std"]

[dependencies.futures]
version = "0.3.5"

[dependencies.chashmap]
version = "2.2.0"

[dependencies.log]
version = "0.4.8"

[dependencies.log4rs]
version = "0.13.0"
features = ["json_encoder", "toml_format"]

[dependencies.chrono]
version = "0.4"

[dependencies.magic-crypt]
version = "3.1.5"
optional = true

[dependencies.anyhow]
version =  "1"

# TODO feature gateway
[dependencies.primitive-types]
version = "0.10"
features = ["impl-serde"]

[dependencies.sparse-merkle-tree]
version = "0.5.2-rc1"
git = "https://github.com/uinb/sparse-merkle-tree"
features = ["serde-rs", "sha256"]

[dependencies.sha2]
version = "0.9"

[dependencies.cfg-if]
version = "1.0.0"

[dependencies.substrate-api-client]
#path = "../substrate-api-client"
git = "https://github.com/uinb/substrate-api-client"
optional = true

[dev-dependencies]
tempdir = "0.3"
