[package]
name = "galois"
version = "0.1.0"
authors = ["UINB Technologies"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/uinb/galois"
description = "High performance matching system"
readme = "README.md"

[[bin]]
name = "galois"
path = "bin/galois.rs"

[features]
default = []
fusotao = ["sub-api", "sp-core", "sp-runtime", "smt", "memmap", "parity-scale-codec", "fuso-runtime"]
enc-conf = ["magic-crypt"]

[dependencies.rust_decimal]
version = "1.15"
features = ["serde-bincode"]

[dev-dependencies.rust_decimal_macros]
version = "1.15"

[dependencies.bincode]
version = "1.3.1"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[dependencies.flate2]
version = "1.0"
features = ["zlib"]
default-features = false

[dependencies.mysql]
version = "18.2"

[dependencies.redis]
version = "0.17"

[dependencies.argparse]
version = "0.2"

[dependencies.toml]
version = "0.5"

[dependencies.lazy_static]
version = "1.4"

[dependencies.linked-hash-map]
version = "0.5.3"
features = ["serde_impl"]

[dependencies.async-std]
version = "1.6"
default-features = false
features = ["std"]

[dependencies.futures]
version = "0.3"

[dependencies.chashmap]
version = "2.2"

[dependencies.log]
version = "0.4"

[dependencies.log4rs]
version = "0.13"
features = ["json_encoder", "toml_format"]

[dependencies.chrono]
version = "0.4"

[dependencies.magic-crypt]
version = "3.1"
optional = true

[dependencies.anyhow]
version =  "1"

[dependencies.thiserror]
version = "1.0"

[dependencies.sha2]
version = "0.9"

[dependencies.cfg-if]
version = "1.0"

[dependencies.hex]
version = "0.4"

[dependencies.memmap]
version = "0.7"
optional = true

[dependencies.smt]
version = "0.5.2"
git = "https://github.com/uinb/sparse-merkle-tree"
package = "sparse-merkle-tree"
features = ["serde-rs", "sha256"]
optional = true

[dependencies.sub-api]
# path = "../substrate-api-client"
git = "https://github.com/uinb/substrate-api-client"
package = "substrate-api-client"
optional = true

[dependencies.fuso-runtime]
git = "https://github.com/uinb/fusotao"
optional = true

[dependencies.parity-scale-codec]
version = '2.0.0'
features = ['derive']
optional = true

[dependencies.sp-core]
version = "3.0.0"
features = ["full_crypto"]
optional = true

[dependencies.sp-runtime]
version = "3.0.0"
optional = true

[dev-dependencies]
tempdir = "0.3"

[patch.crates-io]
crypto-mac = { git = "https://github.com/uinb/traits", package = "crypto-mac", tag = "crypto-mac-v0.7.0" }
