[package]
name = "galois"
version = "0.2.6-dev"
authors = ["UINB Technologies"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/uinb/galois"
description = "High performance matching system"
readme = "README.md"

[[bin]]
name = "galois"
path = "bin/galois.rs"

[[bin]]
name = "enc-config"
path = "bin/enc.rs"
required-features = ["enc-conf"]

[features]
default = []
fusotao = ["sub-api", "parity-scale-codec", "smt", "memmap", "sp-core", "sp-runtime"]
enc-conf = ["magic-crypt"]

[dependencies.rust_decimal]
version = "1.15"
features = ["serde-bincode"]

[dev-dependencies.rust_decimal_macros]
version = "1.15"

[dependencies.bincode]
version = "1.3.1"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[dependencies.flate2]
version = "1.0"
features = ["zlib"]
default-features = false

[dependencies.mysql]
version = "18.2"

[dependencies.redis]
version = "0.17"

[dependencies.argparse]
version = "0.2"

[dependencies.toml]
version = "0.5"

[dependencies.lazy_static]
version = "1.4"

[dependencies.linked-hash-map]
version = "0.5.3"
features = ["serde_impl"]

[dependencies.async-std]
version = "1.6"
default-features = false
features = ["std", "attributes", "tokio1"]

[dependencies.futures]
version = "0.3"

[dependencies.chashmap]
version = "2.2"

[dependencies.log]
version = "0.4"
features = ["serde"]

[dependencies.log4rs]
version = "1.0"
features = ["json_encoder", "toml_format"]

[dependencies.chrono]
version = "0.4"

[dependencies.magic-crypt]
version = "3.1"
optional = true

[dependencies.anyhow]
version =  "1"

[dependencies.thiserror]
version = "1"

[dependencies.blake2]
version = "0.10"

[dependencies.generic-array]
version = "0.14"

[dependencies.cfg-if]
version = "1.0"

[dependencies.hex]
version = "0.4"

[dependencies.memmap]
version = "0.7"
optional = true

[dependencies.smt]
git = "https://github.com/uinb/sparse-merkle-tree"
tag = "v0.1.7"
package = "sparse-merkle-tree"
features = ["serde-rs", "blake2b"]
optional = true

[dependencies.sub-api]
package = "fusotao-rust-client"
git = "https://github.com/uinb/fusotao-rust-client.git"
branch = "polkadot-v0.9.13"
optional = true

[dependencies.parity-scale-codec]
version = '2'
features = ['derive']
optional = true

[dependencies.sp-core]
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.13"
package = "sp-core"
optional = true

[dependencies.sp-runtime]
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.13"
package = "sp-runtime"
optional = true

[dev-dependencies]
tempdir = "0.3"
