[package]
name = "galois-sidecar"
version = "0.7.0-dev"
authors = ["UINB Technologies"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/uinb/galois"
description = "Sidecar for Galois"

[features]
default = []
testenv = []

[dependencies]
futures = "0.3"
jsonrpsee = { version = "0.16.2", features = ["full"] }
tokio = { version = "1.16", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde_json = "1"
rust_decimal = { version = "1.22", features = ["serde-bincode"] }
serde = { version = "1", features = ["derive"] }
toml = "0.5"
tower = "0.4.13"
clap = { version = "4.1.7", features = ["derive"] }
parity-scale-codec = { version = "3", features = ["derive"] }
env_logger = "0.10"
x25519-dalek = "1.1.1"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "mysql", "decimal", "chrono"] }
hex = "0.4"
rand = "0.8.5"
hyper = "0.14"
hyper-tungstenite = "0.9.0"
http = "0.2.7"
dashmap = "5.4.0"
magic-crypt = "3.1"
anyhow =  "1"
thiserror = "1"
log = { version = "0.4", features = ["serde"] }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30", package = "sp-core" }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30", package = "sp-io" }
galois-engine = { path = "../engine" }
hex-literal = "0.4.1"
[dev-dependencies]
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
